Capitalize all API doc tags
