# docs/swagger.json
@@ -443,7 +443,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "warehouses"
+                    "Warehouses"
                 ],
                 "summary": "Retrieve all warehouses",
                 "responses": {
@@ -476,7 +476,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "warehouses"
+                    "Warehouses"
                 ],
                 "summary": "Create a warehouse",
                 "parameters": [
@@ -525,7 +525,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "warehouses"
+                    "Warehouses"
                 ],
                 "summary": "Retrieve a warehouse",
                 "parameters": [
@@ -561,7 +561,7 @@
             "delete": {
                 "description": "Delete a warehouse by ID",
                 "tags": [
-                    "warehouses"
+                    "Warehouses"
                 ],
                 "summary": "Delete a warehouse",
                 "parameters": [
@@ -600,7 +600,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "warehouses"
+                    "Warehouses"
                 ],
                 "summary": "Update a warehouse",
                 "parameters": [
@@ -653,7 +653,7 @@
             "get": {
                 "description": "Get all buyers",
                 "tags": [
-                    "buyers"
+                    "Buyers"
                 ],
                 "summary": "Get all buyers",
                 "responses": {
@@ -686,7 +686,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "buyers"
+                    "Buyers"
                 ],
                 "summary": "Create a new buyer",
                 "parameters": [
@@ -720,7 +720,7 @@
             "get": {
                 "description": "Get a buyer by ID",
                 "tags": [
-                    "buyers"
+                    "Buyers"
                 ],
                 "summary": "Get a buyer by ID",
                 "parameters": [
@@ -759,7 +759,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "buyers"
+                    "Buyers"
                 ],
                 "summary": "Update a buyer by ID",
                 "parameters": [
@@ -804,7 +804,7 @@
             "delete": {
                 "description": "Delete a buyer by ID",
                 "tags": [
-                    "buyers"
+                    "Buyers"
                 ],
                 "summary": "Delete a buyer by ID",
                 "parameters": [
@@ -848,7 +848,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "employees"
+                    "Employees"
                 ],
                 "summary": "Obtém todas as informações dos funcionários",
                 "responses": {
@@ -878,7 +878,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "employees"
+                    "Employees"
                 ],
                 "summary": "Cria um novo funcionário",
                 "parameters": [
@@ -924,7 +924,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "employees"
+                    "Employees"
                 ],
                 "summary": "Obtém as informações de um funcionário pelo ID",
                 "parameters": [
@@ -966,7 +966,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "employees"
+                    "Employees"
                 ],
                 "summary": "Remove um funcionário",
                 "parameters": [
@@ -1005,7 +1005,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "employees"
+                    "Employees"
                 ],
                 "summary": "Atualiza as informações de um funcionário",
                 "parameters": [
